# postbox

./: .gitignore  Cargo.toml  FEATURE_PLAN.md  PROGRESS.md  README.md
crates/postbox/: Cargo.toml
crates/postbox-core/: Cargo.toml
crates/postbox-core/src/: clock.rs  error.rs  lib.rs  memory.rs  metrics.rs  sqlite.rs  store.rs  sweeper.rs  types.rs
crates/postbox-core/tests/: features.rs  memory.rs  properties.rs  sqlite.rs  sweeper.rs
crates/postbox-core/tests/common/: mod.rs
crates/postbox-grpc/: Cargo.toml  build.rs
crates/postbox-grpc/proto/: postbox.proto
crates/postbox-grpc/src/: grpc.rs  http.rs  lib.rs
crates/postbox-grpc/tests/: grpc.rs  http.rs
crates/postbox-mcp/: Cargo.toml
crates/postbox-mcp/src/: lib.rs  server.rs
crates/postbox-mcp/tests/: stdio.rs
crates/postbox/src/: main.rs
