[package]
name = "postbox-grpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "HTTP and gRPC front ends for Postbox"

[dependencies]
postbox-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prost = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
humantime-serde = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }