[package]
name = "postbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true
description = "Postbox server binary: wires core + grpc + mcp"

[[bin]]
name = "postbox"
path = "src/main.rs"

[dependencies]
postbox-core = { workspace = true }
postbox-grpc = { workspace = true }
postbox-mcp = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
humantime-serde = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
bytes = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }